# llm-n-parameter-study

./: .env.example  .gitignore  .pre-commit-config.yaml  PR_DESCRIPTION.md  README.md  _config.yml  _toc.yml  genindex.html  intro.html  intro.md  objects.inv  pyproject.toml  pytest.ini  references.bib  replicability-reviewer-agent-spec.md  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: ci.yml
_sources/: intro.md
_sources/chapters/: 02_literature_review.md
chapters/: 01_methodology.html  01_methodology.ipynb  02_literature_review.html  02_literature_review.md
data/: README.md
data/sample_experiments/: openai_n_param.json  openai_separate.json
scripts/: generate_synthetic_data.py  run_real_experiments.py
src/: __init__.py  analysis.py
src/llm_n_parameter/: __init__.py  analysis.py  experiments.py  verified_experiments.py  visualization.py
tests/: test_independence.py
tools/: journal-reviewer-agents.md  replicability-reviewer.md
