[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-n-parameter"
version = "0.1.0"
description = "Statistical analysis of the n parameter in LLM APIs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Max Ghenis", email = "max@example.com"}
]
keywords = ["llm", "statistics", "api", "research", "reproducibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.80.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "pre-commit>=3.3.0",
    "ipykernel>=6.25.0",
]

docs = [
    "jupyter-book>=0.15.0",
    "sphinx>=6.0.0",
    "pydata-sphinx-theme>=0.13.0",
    "myst-nb>=0.17.0",
]

viz = [
    "plotly>=5.14.0",
    "altair>=5.0.0",
    "bokeh>=3.0.0",
]

all = [
    "llm-n-parameter[dev,docs,viz]",
]

[project.urls]
Homepage = "https://github.com/maxghenis/llm-n-parameter-study"
Documentation = "https://llm-n-parameter.study"
Repository = "https://github.com/maxghenis/llm-n-parameter-study"
Issues = "https://github.com/maxghenis/llm-n-parameter-study/issues"

[project.scripts]
llm-n-parameter = "llm_n_parameter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm_n_parameter = ["data/*.json", "configs/*.yaml"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=llm_n_parameter",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "live_api: marks tests that require API keys",
]

[tool.coverage.run]
source = ["src/llm_n_parameter"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]